--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -55,3 +55,23 @@ jobs:
         with:
           user: __token__
           password: ${{ secrets.pypi_password }}
+  update-brew:
+    needs: publish-package
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@master
+      - name: Set up Python 3.7
+        uses: actions/setup-python@v1
+        with:
+          python-version: 3.7
+      - uses: dschep/install-pipenv-action@v1
+      - name: publish brew
+        run: |
+          git config --local user.email "action@github.com"
+          git config --local user.name "GitHub Action"
+          pipenv run pip install homebrew-pypi-poet
+          pipenv run pip install bc-onelogin-aws-assume-role -U
+          git pull
+          pipenv run poet -f bc-onelogin-aws-assume-role > HomebrewFormula/bc-onelogin-aws-assume-role.rb
+          git commit --reuse-message=HEAD@{1} HomebrewFormula/checkov.rb || echo "No brew changes to commit"
+          git push origin
