--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,6 +23,7 @@ jobs:
 
           ## update python version
           file_version="__version__ = '$new_tag'"
+          ls -la src/aws_assume_role
           echo -e "#! /usr/bin/env python \n\n$file_version" > 'src/aws_assume_role/version.py'
           cat src/aws_assume_role/version.py
 
