--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,10 +24,10 @@ jobs:
           ## update python version
           file_version="__version__ = '$new_tag'"
           ls -la src/aws_assume_role
-          echo -e "#! /usr/bin/env python \n\n$file_version" > 'src/aws_assume_role/version.py'
+          echo "#! /usr/bin/env python \n\n$file_version" > 'src/aws_assume_role/version.py'
           cat src/aws_assume_role/version.py
 
-          git commit --reuse-message=HEAD@{1} src/aws-assume-role/version.py
+          git commit -m "bumping version" src/aws-assume-role/version.py
           git push origin
           git tag $new_tag
           git push origin $new_tag
