--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,8 +22,12 @@ jobs:
           echo "new tag: $new_tag"
 
           ## update python version
-          file_version="__version__ = '$new_tag'"
-          echo "#! /usr/bin/env python \n\n$file_version" > 'src/aws_assume_role/version.py'
+          cat << EOF > src/aws_assume_role/version.py
+#! /usr/bin/env python
+
+__version__ = '$new_tag'
+
+EOF
 
           git commit --reuse-message=HEAD@{1} src/aws_assume_role/version.py || echo "No changes to commit"
           git push origin
